# PointnetEnhanced

./: Pointnet_Training_and_Evaluate.ipynb  README.md
3DmFV-Net-master/: provider.py  train_cls.py
pointnet/: evaluate.py  provider.py  train.py
pointnet/dump/: log_evaluate.txt  pred_label.txt
pointnet/log/: log_train.txt  model.ckpt.index  train.py
pointnet/log/train/: events.out.tfevents.1540824161.0793679add95  events.out.tfevents.1540824189.0793679add95  events.out.tfevents.1540827719.0793679add95  events.out.tfevents.1540827776.0793679add95  events.out.tfevents.1540827936.0793679add95  events.out.tfevents.1540828105.0793679add95  events.out.tfevents.1540828192.0793679add95  events.out.tfevents.1540829106.0793679add95  events.out.tfevents.1540903247.00c81550eb6e  events.out.tfevents.1541339284.5242893c48e6  events.out.tfevents.1541340111.5242893c48e6  events.out.tfevents.1541340292.5242893c48e6  events.out.tfevents.1541340515.5242893c48e6  events.out.tfevents.1541340541.5242893c48e6  events.out.tfevents.1541340776.5242893c48e6  events.out.tfevents.1541341267.5242893c48e6  events.out.tfevents.1541341584.5242893c48e6  events.out.tfevents.1541341827.5242893c48e6  events.out.tfevents.1541341920.5242893c48e6
pointnet/models/: pointnet_cls.py  pointnet_cls_basic.py  pointnet_seg.py  transform_nets.py
pointnet/utils/: pc_util.py
pointnet2/: test.py  train_multi_gpu.py
pointnet2/log/: log_train.txt  model.ckpt.index  train.py
pointnet2/log/test/: events.out.tfevents.1540915393.iss-vm  (+5 more)
pointnet2/tf_ops/grouping/: CMakeLists.txt  tf_grouping_compile.sh
(+23 files in other folders)
